index and about page update

--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
                 <a href="index.html" title="">Home</a>
               </li>
               <li><a href="about.html" title="">About</a></li>
-              <li><a href="contact.html" title="">Contact</a></li>
             </ul>
             <!-- end s-header__nav -->
           </nav>
@@ -101,15 +100,22 @@
                         <a href="category.html">This is Reno Chen</a>
                       </span>
                     <p class="hero__entry-desc">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                      sed do eiusmod tempor incididunt ut labore et dolore magna
-                      aliqua. Ut enim ad minim veniam, quis nostrud corporis est
-                      laudantium voluptatum consectetur adipiscing.
+                        My Chinese name is called Qi Chen Chen, and
+                        <span class="name">Reno Chen</span> is my preferred name.
                     </p>
-
+                    <p class="hero__entry-desc">
+                        I come from Taiwan and was born in China. <br />My birthday is 7/18/2000
+                    </p>
+                    <p class="hero__entry-desc">
+                        <span class="school"
+              >University of Iowa, Tippie School of Business</span
+            > <br /> Major in Business Analytics
+                    </p>
+              
 </footer><!-- end s-footer -->
 
-
+<a href="https://github.com/Reno0718">Github</a><br />
+ <a href="https://www.linkedin.com/in/renochen/">Linkedin</a>
 <!-- Java Script
 ================================================== -->
 <script src="js/plugins.js"></script>
