about page update

--- a/index.html
+++ b/index.html
@@ -111,11 +111,15 @@
               >University of Iowa, Tippie School of Business</span
             > <br /> Major in Business Analytics
                     </p>
-              
+ 
+<footer id="footer">
+    <a href="https://github.com/Reno0718">Github</a><br />
+    <a href="https://www.linkedin.com/in/renochen/">Linkedin</a>
 </footer><!-- end s-footer -->
 
-<a href="https://github.com/Reno0718">Github</a><br />
- <a href="https://www.linkedin.com/in/renochen/">Linkedin</a>
+
+
+
 <!-- Java Script
 ================================================== -->
 <script src="js/plugins.js"></script>
