--- a/index.html
+++ b/index.html
@@ -125,6 +125,15 @@
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YH6MLT38P5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YH6MLT38P5');
+</script>
 </body>
 </html>
                 
